fix(front-end/colors): increased gap size to match the design

--- a/front-end/src/components/molecules/colors/colors-styles.scss
+++ b/front-end/src/components/molecules/colors/colors-styles.scss
@@ -1,4 +1,4 @@
 .colors {
     display: flex;
-    gap: 4px;
+    gap: 8px;
 }
